# VectaLearn

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  pyproject.toml
app/: __init__.py  home.py
notebooks/: template.ipynb
src/client/: __init__.py  home.py  schema.py
src/client/components/: __init__.py
src/client/components/chat/frontend/: package.json
src/client/components/chat/frontend/src/: MyComponent.tsx
src/client/pages/: 1_docstore.py
src/rag/: llm.py
src/server/: __init__.py  run.py  schema.py
src/server/api/: __init__.py  main.py
src/server/api/routes/: chat.py  document.py  user.py
src/server/rag/: llm.py
src/server/schema/: __init__.py  chat.py  document.py  user.py  whisper.py
src/server/vecta_learn/: __init__.py  patch.py  whisper.py
