[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.27.2"
chromadb = "^0.4.14"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pandas = "^2.1.1"
rich = "^13.6.0"
llama-index = "^0.8.48"
sentence-transformers = "^2.2.2"
transformers = ">=4.34.1,<5.0.0"
fire = "^0.5.0"
langsmith = "^0.0.53"
whispercpp = "^0.0.17"
ffmpeg-python = "^0.2.0"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.10.0"
pre-commit = "^3.5.0"
seaborn = "^0.13.0"
huggingface-hub = ">=0.16.4,<0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
